--- a/styles/base.css
+++ b/styles/base.css
@@ -11,6 +11,15 @@ body {
     font-size: 1.2rem;
 }
 
+header {
+    width: 100%;
+    max-width: 100%;
+    min-width: 700px;
+    background-color: rgba(0, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    margin-bottom: 1rem;
+}
+
 header span {
     width: 100%;
     max-width: 100%;
