W02 Assignment in Progress

--- a/styles/base.css
+++ b/styles/base.css
@@ -168,3 +168,12 @@ footer {
     color: white;
     margin-top: 2rem;
 }
+
+.copyright {
+    font-size: larger;
+    /* font-weight: bold; */
+}
+
+#lastmodified {
+    color: aqua;
+}
