--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 50em) {
     .navigation::before {
         content: none;
     }
