--- a/styles/temples.css
+++ b/styles/temples.css
@@ -14,7 +14,8 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #214A22;
+    color: #F5F5F5;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -26,7 +27,7 @@ header {
 }
 
 footer {
-    background-color: #4CAF50;
+    background-color: #214A22;
     color: white;
     text-align: center;
     padding: 1rem;
@@ -36,7 +37,7 @@ footer {
 
 #lastmodified {
     font-size: 0.9rem;
-    color: #333;
+    color: #F5F5F5;
     font-weight: 700;
 }
 
@@ -53,6 +54,7 @@ li {
 
 main {
     width: 90%;
+    max-width: 100%;
     margin: 1rem auto;
     padding: 0 5rem 3rem;
     border-radius: 15px;
@@ -62,11 +64,12 @@ main {
 h1 {
     text-align: center;
     margin: 2rem;
-    color: #4CAF50;
+    color: #214A22;
 }
 
 .temples-grid {
     width: 100%;
+    height: auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 3rem;
@@ -91,6 +94,7 @@ figure:hover {
 }
 
 figcaption {
+  width: 100%;
     text-align: center;
     margin-top: 0.5rem;
     font-weight: bold;
