--- a/styles/temples.css
+++ b/styles/temples.css
@@ -56,7 +56,7 @@ main {
     width: 90%;
     max-width: 100%;
     margin: 1rem auto;
-    padding: 0 5rem 3rem;
+    padding: 1rem;
     border-radius: 15px;
     box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1);
 }
