--- a/styles/temples.css
+++ b/styles/temples.css
@@ -14,15 +14,7 @@ body {
 }
 
 header {
-    background-color: #214A22;
-    color: #F5F5F5;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5rem;
-    font-size: 1.5rem;
-    font-weight: bolder;
-    padding: 1rem 1rem;
+    width: 100%;
     /* gap: 2rem; */
 }
 
@@ -39,6 +31,18 @@ footer {
     font-size: 0.9rem;
     color: #F5F5F5;
     font-weight: 700;
+}
+
+nav {
+    background-color: #214A22;
+    color: #F5F5F5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5rem;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    padding: 1rem 1rem;
 }
 
 main {
