--- a/styles/temples.css
+++ b/styles/temples.css
@@ -46,7 +46,17 @@ nav {
 }
 
 .menu-toggle {
-    
+    background: transparent;
+    width: 40px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bar {
+  width: 100%;
+  height: 100%;
+  background: whitesmoke;
 }
 
 main {
