--- a/styles/temples.css
+++ b/styles/temples.css
@@ -61,6 +61,19 @@ nav {
   border-radius: 5px;
 }
 
+.menu {
+  display: none;
+}
+
+.menu.active {
+  width: 100%;
+  position: absolute;
+  top: 55px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  
+}
 main {
     width: 90%;
     max-width: 100%;
