--- a/styles/temples.css
+++ b/styles/temples.css
@@ -75,7 +75,13 @@ nav {
 }
 
 .menu.active ul li, .menu.active ul li a {
+  width: 100%;
+  height: 100%;
   list-style: none;
+  text-decoration: none;
+}
+
+.menu.active ul li a {
   text-decoration: none;
 }
 main {
