--- a/styles/temples.css
+++ b/styles/temples.css
@@ -74,7 +74,7 @@ nav {
   flex-direction: column;
 }
 
-.menu.active ul li, .menu.active ul li a {
+.menu ul li, .menu ul li a {
   width: 100%;
   height: 100%;
   list-style: none;
