--- a/styles/temples.css
+++ b/styles/temples.css
@@ -74,14 +74,14 @@ nav {
   flex-direction: column;
 }
 
-.menu ul li, .menu ul li a {
+.menu.active li, .menu.active li a {
   width: 100%;
   height: 100%;
   list-style: none;
   text-decoration: none;
 }
 
-.menu.active ul li a {
+.menu.active li a {
   text-decoration: none;
 }
 main {
