--- a/styles/temples.css
+++ b/styles/temples.css
@@ -79,11 +79,9 @@ nav {
   height: 100%;
   list-style: none;
   text-decoration: none;
+  text-align: center;
 }
 
-.menu.active li a {
-  text-decoration: none;
-}
 main {
     width: 90%;
     max-width: 100%;
