--- a/styles/temples.css
+++ b/styles/temples.css
@@ -75,6 +75,10 @@ nav {
   background: #333;
 }
 
+.menu.active li {
+  width: 100%;
+}
+
 .menu.active li, .menu.active li a {
   /* width: 100%; */
   height: 100%;
