--- a/styles/temples.css
+++ b/styles/temples.css
@@ -97,6 +97,15 @@ nav {
   background: rgba(0, 255, 0, 0.1);
 }
 
+.menu-toggle:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-toggle:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+  transition: all .7s ease-in-out;
+}
+
 main {
     width: 90%;
     max-width: 100%;
