--- a/styles/temples.css
+++ b/styles/temples.css
@@ -106,6 +106,11 @@ nav {
   transition: all .7s ease-in-out;
 }
 
+.menu-toggle:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+  transition: all .7s ease-in-out;
+}
+
 main {
     width: 90%;
     max-width: 100%;
