--- a/styles/temples.css
+++ b/styles/temples.css
@@ -101,12 +101,12 @@ nav {
   opacity: 0;
 }
 
-.menu-toggle:nth-child(1) {
+.menu-toggle.active .bar:nth-child(1) {
   transform: translateY(8px) rotate(45deg);
   transition: all .7s ease-in-out;
 }
 
-.menu-toggle.active:nth-child(3) {
+.menu-toggle.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
   transition: all .7s ease-in-out;
 }
