--- a/styles/temples.css
+++ b/styles/temples.css
@@ -97,6 +97,10 @@ nav {
   background: rgba(0, 255, 0, 0.1);
 }
 
+.menu-toggle {
+  display: block;
+  z-index: 999;
+}
 .menu-toggle.active:nth-child(2) {
   opacity: 0;
 }
