--- a/styles/temples.css
+++ b/styles/temples.css
@@ -47,11 +47,11 @@ nav {
 
 .menu-toggle {
     background: transparent;
+    padding: 10px;
+    border: none;
     width: 40px;
     height: 30px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 3px;
+    display: none;
 }
 
 .bar {
@@ -98,7 +98,6 @@ nav {
 }
 
 .menu-toggle {
-  display: block;
   z-index: 999;
 }
 .menu-toggle.active:nth-child(2) {
