--- a/styles/temples.css
+++ b/styles/temples.css
@@ -56,8 +56,9 @@ nav {
 
 .bar {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
   background: whitesmoke;
   border-radius: 5px;
 }
