--- a/styles/temples.css
+++ b/styles/temples.css
@@ -47,18 +47,16 @@ nav {
 
 .menu-toggle {
     background: transparent;
-    padding: 10px;
-    border: none;
     width: 40px;
     height: 30px;
-    display: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 3px;
 }
 
 .bar {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
+  width: 100%;
+  height: 100%;
   background: whitesmoke;
   border-radius: 5px;
 }
@@ -99,21 +97,18 @@ nav {
   background: rgba(0, 255, 0, 0.1);
 }
 
-.menu-toggle {
-  z-index: 999;
-}
 .menu-toggle.active:nth-child(2) {
   opacity: 0;
 }
 
 .menu-toggle.active .bar:nth-child(1) {
   transform: translateY(8px) rotate(45deg);
-  transition: all .7s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .menu-toggle.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
-  transition: all .7s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 main {
