--- a/styles/temples.css
+++ b/styles/temples.css
@@ -51,6 +51,7 @@ nav {
     height: 30px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     row-gap: 3px;
 }
 
@@ -59,7 +60,6 @@ nav {
   height: 5px;
   background: whitesmoke;
   border-radius: 5px;
-  padding: 1px;
 }
 
 .menu {
