--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,30 +1,31 @@
 @media screen and (min-width: 50em) {
-    ..menu-toggle {
-        display: none;
+    .menu-toggle {
+      /* transition: all .7s eas-in-out; */
+      display: none;
     }
     
     .menu {
-        display: flex;
+      display: flex;
     }
 
-    ul {
-            list-style: none;
-            display: flex;
-            gap: 1rem;
-            padding: 10px;
-            font-size: large;
-        }
-
-    ul li a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
+    .menu {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      padding: 10px;
+      font-size: large;
     }
 
-    ul li a:hover, ul li a:focus {
-        background-color: rgba(0, 0, 0, 0.1);
-        border-radius: 15px;
-        transition: all 0.3s ease;
-        padding: .7rem 2rem;
+    .menu li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .menu li a:hover, .menu li a:focus {
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 15px;
+      transition: all 0.3s ease;
+      padding: .7rem 2rem;
     }
 }
