--- a/styles/temples.css
+++ b/styles/temples.css
@@ -51,7 +51,7 @@ nav {
     height: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     row-gap: 3px;
 }
 
