--- a/styles/temples.css
+++ b/styles/temples.css
@@ -80,7 +80,7 @@ nav {
   width: 100%;
 }
 
-.menu.active li, .menu.active li a {
+.menu li, .menu li a {
   /* width: 100%; */
   height: 100%;
   list-style: none;
@@ -88,10 +88,6 @@ nav {
   text-align: center;
   color: whitesmoke;
   padding: 1rem;
-}
-
-.menu.active li a {
-  width: 100%;
 }
 
 .menu.active li a:hover {
