--- a/styles/temples.css
+++ b/styles/temples.css
@@ -80,8 +80,9 @@ nav {
   width: 100%;
 }
 
-.menu li, .menu li a {
+.menu.active li, .menu.active li a {
   /* width: 100%; */
+  display: block;
   height: 100%;
   list-style: none;
   text-decoration: none;
