--- a/styles/temples.css
+++ b/styles/temples.css
@@ -88,8 +88,11 @@ nav {
   text-decoration: none;
   text-align: center;
   color: whitesmoke;
+}
+
+.menu.active li a {
   padding: 1rem 0;
-  border-top: 2px solid whitesmoke;
+  border-top: 1px solid whitesmoke;
 }
 
 .menu.active li a:hover {
