--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -17,7 +17,7 @@
     }
 
     .menu li a {
-      color: white;
+      color: whitesmoke;
       text-decoration: none;
       font-weight: bold;
     }
