--- a/styles/temples.css
+++ b/styles/temples.css
@@ -68,8 +68,8 @@ nav {
 
 .menu.active {
   width: 100%;
-  position: absolute;
-  top: 60px;
+  position: sticky;
+  top: 65px;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -95,8 +95,9 @@ nav {
   border-top: 1px solid whitesmoke;
 }
 
-.menu.active li a:hover {
+.menu.active li a:hover, .menu.active li a:focus {
   background: rgba(0, 255, 0, 0.1);
+  transition: all 0.3s ease;
 }
 
 .menu-toggle.active .bar:nth-child(2) {
