--- a/styles/temples.css
+++ b/styles/temples.css
@@ -34,6 +34,8 @@ footer {
 }
 
 nav {
+    position: sticky;
+    top: 0;
     background-color: #214A22;
     color: #F5F5F5;
     display: flex;
@@ -68,8 +70,8 @@ nav {
 
 .menu.active {
   width: 100%;
-  position: sticky;
-  top: 65px;
+  position: absolute;
+  top: 60px;
   left: 0;
   display: flex;
   flex-direction: column;
