--- a/week02/styles/temples-large.css
+++ b/week02/styles/temples-large.css
@@ -11,7 +11,7 @@
     .menu {
       list-style: none;
       display: flex;
-      gap: 1rem;
+      gap: 2.5rem;
       padding: 10px;
       font-size: large;
     }
@@ -20,12 +20,18 @@
       color: whitesmoke;
       text-decoration: none;
       font-weight: bold;
+      /* padding: .5rem 1.5rem; */
     }
 
     .menu li a:hover, .menu li a:focus {
       background-color: rgba(0, 0, 0, 0.1);
       border-radius: 15px;
       transition: all 0.3s ease;
-      padding: .7rem 2rem;
+      padding: .3rem 1.5rem;
+    }
+
+    .menu li:hover {
+      cursor: pointer;
+      transform: scale(1.5);
     }
 }
