--- a/styles/base.css
+++ b/styles/base.css
@@ -5,175 +5,181 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: rgb(10, 9, 9);
-    color: white;
+    background-color: rgb(169, 168, 168);
     font-size: 1.2rem;
-}
-
-header {
-    width: 100%;
-    max-width: 100%;
-    min-width: 700px;
-    background-color: rgba(0, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
-    margin-bottom: 1rem;
+    color: black;
+    font-family: 'Roboto';
 }
 
 header span {
-    width: 100%;
-    max-width: 100%;
-    min-width: 700px;
-    padding: 1.5rem 0;
     display: block;
-    font-size: 2rem;
     text-align: center;
-    /* background-color: var(--primary-color); */
-    font-weight: bold;
-    backdrop-filter: blur(15px);
-    color: aqua
+    font-size: 2rem;
+    padding: .5em;
+    background-color: rgba(4, 4, 167 , .8);
+    color: aliceblue;
+    border-bottom: 1px solid black;
 }
 
-nav {
-    margin-bottom: 2rem;
+header nav ul {
     width: 100%;
-    max-width: 100%;
-    min-width: 700px;
-}
-
-nav ul {
+    height: 100%;
     list-style: none;
     display: flex;
+    font-size: larger;
     justify-content: space-around;
-    font-size: large;
-    padding: 1rem 0;
-    background-color: rgba(0, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
+    background-color: rgba(4, 4, 109, 1);
+    border-bottom: 1px solid black;
+    box-shadow: 0 5px 15px black;
+    padding: 0 .5em;
 }
 
-nav ul li a {
+header nav ul li {
+    display: block;
+    width: 100%;
+    /* height: auto; */
+    padding: .5em 0;
+}
+
+header nav ul li a {
     text-decoration: none;
-    font-weight: bold;
-    color: rgb(225, 222, 222);
+    color: aliceblue;
+    padding: .3em 0;
+    display: block;
+    width: 100%;
+    border-radius: 5px;
+    border-right: 1px solid rgb(37, 37, 179);
+    border-left: 1px solid rgb(37, 37, 179);
+    text-align: center;
 }
 
-nav ul li a:hover {
-    color: aqua;
-    transition: all 0.3s ease-in-out;
+header nav ul li a:hover, header nav ul li a:focus {
+    /* background-color: rgba(4, 4, 167 , .8); */
+    background-color: rgb(37, 37, 179);
+    transition: all .5s ease-in-out;
 }
 
 main {
-    width: 100%;
-    max-width: 80%;
-    min-width: 700px;
-    margin: 2rem auto;
-    padding: 0 1rem;
+    width: 90%;
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr auto;
-    gap: 2rem;
+    grid-template-columns: 2fr 1fr;
+    gap: 1em;
 }
 
-h1 {
-    grid-column: 1 / 3;
-    margin-bottom: 1rem;
+main h1 {
+    grid-column: 1 / span 2;
     text-align: center;
-    font-size: 1.7rem;
-    color: aqua;
+    font-size: 2.5rem;
+    margin-top: .6em;
+    color: rgba(4, 4, 167, .8);
 }
 
-h2 {
-    margin-bottom: 1rem;
-    color: aqua;
-    border-bottom: 2px solid rgb(37, 108, 108);
+.card {
+    border: 2px solid blue;
+    border-radius: 10px;
+}
+
+.card .card-position {
+    padding: 1em;
 }
 
 img {
     width: 150px;
     height: auto;
-    border-radius: 50%;
+    border: 1px solid black;
+    border-radius: 10px;
+    /* box-shadow: 0 0 5px black; */
+    /* float: right; */
+}
+
+.about-section h2, .resource-section h2 {
+    background-color: rgba(4, 4, 167, .8);
+    box-shadow: 0 5px 15px black;
+    color: whitesmoke;
+    font-size: medium;
+    padding: .8em;
+    border-radius: 10px 10px 0 0;
+    text-align: center;
+    /* margin-bottom: 1em; */
 }
 
 .about-me {
     display: flex;
-    gap: 1rem;
-    align-items: center;
-    margin-bottom: 2rem;
+    gap: 1em;
+    margin: 0 1em 0 0;
+}
+
+.about-me p {
+    align-self: center;
 }
 
 .about-me img {
-    /* flex-shrink: 0; */
     order: 2;
-    border: 4px solid rgb(65, 97, 97);
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+    border-radius: 30%;
 }
 
-.card {
-    padding: 1rem;
-    border-radius: 10px;
-    background-color: rgba(0, 255, 255, 0.1);
-    /* margin-bottom: 5rem; */
+.country {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10em 0 0;
 }
 
-.card ul {
-    list-style: none;
-    line-height: 3;
-    margin: 1rem;
-    padding-top: 2rem;   
-}
-
-.card ul li a {
-    text-decoration: underline;
-    color: white;
-}
-
-.card ul li a:hover {
-    color: aqua;
-    transition: all 0.3s ease-in-out;
-}
-
-h3 {
+.country h3 {
     text-align: center;
-    margin: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid rgba(4, 4, 167, .8);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    margin: 0 2.5em 1em;
+    padding-bottom: .2em;
+    color: rgba(4, 4, 167, .8);
 }
 
 .about-nigeria {
-    margin: 1rem;
     display: flex;
-    gap: 3rem;
-    align-items: center;
+    gap: 1em;
+    /* margin: 0 9em 0 0; */
 }
 
-.about-nigeria img {
-    border-radius: 10px;
-    width: 300px;
-    height: 200px;
+.about-nigeria :first-child figcaption {
+    text-align: center;
+    font-size: large;
+    font-style: italic;
+    /* color: rgba(4, 4, 167, .8); */
 }
 
-p {
-    line-height: 1.6;
+.resources ul {
+    width: 100%;
+}
+
+.resources ul li {
+    list-style: none;
+    text-align: center;
+    /* margin: 2em 0; */
+    /* display: block; */
+}
+
+.resources ul li a {
+    display: block;
+    text-decoration: none;
+    width: 100%;
+    border-top: 1px solid rgba(4, 4, 167 , .8);
+    padding: 1.5em;
+}
+
+.resources ul li a:hover, .resources ul li a:focus {
+    background-color: rgba(37, 37, 179, .8);
+    color: whitesmoke;
+    transition: all .5s ease-in-out;
 }
 
 footer {
-    width: 100%;
-    max-width: 100%;
-    min-width: 700px;
-    padding: 1.5rem 0;
-    display: block;
-    font-size: 1rem;
+    background-color: rgba(4, 4, 167 , .8);
+    color: whitesmoke;
+    /* display: flex;
+    justify-content: space-between; */
+    padding: 1em;
+    margin-top: 1.5em;
     text-align: center;
-    background-color: rgba(0, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
-    color: white;
-    margin-top: 2rem;
-}
-
-.copyright {
-    font-size: larger;
-    /* font-weight: bold; */
-}
-
-#lastmodified {
-    color: aqua;
+    font-size: large;
 }
