--- a/styles/base.css
+++ b/styles/base.css
@@ -6,7 +6,8 @@
 
 body {
     background-color: rgb(169, 168, 168);
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
+    font-size: 1.5vw;
     color: black;
     font-family: 'Roboto';
 }
@@ -14,7 +15,8 @@ body {
 header span {
     display: block;
     text-align: center;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: 2.5vw;
     padding: .5em;
     background-color: rgba(4, 4, 167 , .8);
     color: aliceblue;
@@ -26,7 +28,7 @@ header nav ul {
     height: 100%;
     list-style: none;
     display: flex;
-    font-size: larger;
+    /* font-size: larger; */
     justify-content: space-around;
     background-color: rgba(4, 4, 109, 1);
     border-bottom: 1px solid black;
@@ -97,7 +99,8 @@ img {
     background-color: rgba(4, 4, 167, .8);
     box-shadow: 0 5px 15px black;
     color: whitesmoke;
-    font-size: medium;
+    /* font-size: medium; */
+    font-size: 1.3vw;
     padding: .8em;
     border-radius: 10px 10px 0 0;
     text-align: center;
@@ -115,6 +118,8 @@ img {
 }
 
 .about-me img {
+    width: 23%;
+    height: auto;
     order: 2;
     border-radius: 30%;
 }
@@ -141,9 +146,14 @@ img {
     /* margin: 0 9em 0 0; */
 }
 
+.about-nigeria figure img {
+    width: 100%;
+    height: auto;
+}
+
 .about-nigeria :first-child figcaption {
     text-align: center;
-    font-size: large;
+    /* font-size: large; */
     font-style: italic;
     /* color: rgba(4, 4, 167, .8); */
 }
@@ -181,5 +191,5 @@ footer {
     padding: 1em;
     margin-top: 1.5em;
     text-align: center;
-    font-size: large;
+    /* font-size: large; */
 }
