--- a/styles/base.css
+++ b/styles/base.css
@@ -74,15 +74,15 @@ main {
 main h1 {
     grid-column: 1 / span 2;
     text-align: center;
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
     margin-top: .6em;
     color: rgba(4, 4, 167, .8);
+    text-shadow: 0 -5px 25px black;
 }
 
 .card {
     border: 2px solid rgba(4, 4, 167, .8);
     border-radius: 12px;
-    /* box-shadow: 0 0 15px; */
 }
 
 .card .card-position {
@@ -108,6 +108,14 @@ img {
     border-radius: 10px 10px 0 0;
     text-align: center;
     /* margin-bottom: 1em; */
+}
+
+.about-section {
+    box-shadow: -2px 5px 10px black;
+}
+
+.resource-section {
+    box-shadow: 2px 5px 10px black;
 }
 
 .about-me {
@@ -195,4 +203,10 @@ footer {
     margin-top: 1.5em;
     text-align: center;
     /* font-size: large; */
+}
+
+#lastmodified {
+    color: yellowgreen;
+    font-size: 1.4vw;
+    margin-top: .5vw;
 }
